--- a/note-types/mvj/css.css
+++ b/note-types/mvj/css.css
@@ -270,6 +270,7 @@ span.empty { display: none; }
 
 .replay-button svg {
     display: block;
+    pointer-events: none;
 }
 
 /* Circle */
